# qoqo-qiskit

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/workflows/: hqs-build-deploy-all-docs.yml  hqs-build-deploy-pure-python.yml  hqs-build-deploy-rust-pyo3.yml  hqs-build-deploy-sphinx-doc-pure-python.yml  hqs-build-deploy-sphinx-doc-rust-pyo3.yml  hqs-ci-test-pure-python.yml  hqs-ci-test-rust-pyo3.yml  testing.yml
archive/: README.md
archive/qoqo_qiskit_devices/: build.rs  pyproject.toml
archive/qoqo_qiskit_devices/python_tests/: test_qiskit_info_retrieval.py
archive/qoqo_qiskit_devices/qoqo_qiskit_devices/: DEPENDENCIES
deprecated/qoqo_qiskit_devices/docs/: Makefile
documentation/: book.toml
documentation/src/: Introduction.md  SUMMARY.md
qoqo_qiskit/: README.md  pyproject.toml
qoqo_qiskit/docs/: conf.py
qoqo_qiskit/qoqo_qiskit/interface/: __init__.py
qoqo_qiskit_devices/: Cargo.toml  README.md  build.rs  pyproject.toml
qoqo_qiskit_devices/docs/: conf.py  index.rst  modules.rst
qoqo_qiskit_devices/python_tests/: test_initialization.py  test_qiskit_info_retrieval.py
qoqo_qiskit_devices/qoqo_qiskit_devices/: DEPENDENCIES  __init__.py  device_property.py  mocked_properties.py
qoqo_qiskit_devices/src/: lib.rs
qoqo_qiskit_devices/src/devices/: ibm_belem.rs  ibm_jakarta.rs  ibm_lagos.rs  ibm_lima.rs  ibm_manila.rs  ibm_nairobi.rs  ibm_oslo.rs  ibm_perth.rs  ibm_quito.rs  mod.rs
qoqo_qiskit_devices/tests/integration/: device.rs  main.rs
roqoqo_qiskit_devices/: Cargo.toml  README.md
roqoqo_qiskit_devices/src/: devices.rs  ibm_lagos.rs  ibm_nairobi.rs  ibm_oslo.rs  ibm_perth.rs  ibmq_belem.rs  ibmq_jakarta.rs  ibmq_lima.rs  ibmq_manila.rs  ibmq_quito.rs  lib.rs
(+34 files in other folders)
