[project]
name = "qoqo_qiskit_devices"
version = "0.10.0"
dependencies = [
  'qoqo_calculator_pyo3>=1.2,<1.3',
  'qoqo>=1.16,<1.17',
  'qiskit>=1.0,<1.3',
  'qiskit_ibm_runtime>=0.15',
  'struqture_py',
  "setuptools; python_version>='3.12'",
]
license = { text = "Apache-2.0 AND Apache-2.0 with LLVM-exception AND MIT AND Unicode-DFS-2016 AND BSD-2-Clause AND BSD-3-CLause" }
maintainers = [
  { name = "HQS Quantum Simulations GmbH", email = "info@quantumsimulations.de" },
]
requires-python = ">=3.9"

[project.optional-dependencies]
docs = [
  'numpy',
  'sphinx>=2.1',
  'nbsphinx',
  'pygments',
  'recommonmark',
  'myst_parser',
  'sphinx_rtd_theme',
  'tomli',
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "pyo3"
compatibility = "manylinux2014"
skip-auditwheel = false
strip = true
profile = "release"
